app/Grammar/Par.y
-- This Happy file was machine-generated by the BNF converter
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
module Grammar.Par
  ( happyError
  , myLexer
  , pProgram
  ) where

import Prelude

import qualified Grammar.Abs
import Grammar.Lex

}

%name pProgram Program
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '!' { PT _ (TS _ 1) }
  '!=' { PT _ (TS _ 2) }
  '%' { PT _ (TS _ 3) }
  '&&' { PT _ (TS _ 4) }
  '(' { PT _ (TS _ 5) }
  ')' { PT _ (TS _ 6) }
  '*' { PT _ (TS _ 7) }
  '+' { PT _ (TS _ 8) }
  '++' { PT _ (TS _ 9) }
  ',' { PT _ (TS _ 10) }
  '-' { PT _ (TS _ 11) }
  '--' { PT _ (TS _ 12) }
  '->' { PT _ (TS _ 13) }
  '/' { PT _ (TS _ 14) }
  ':' { PT _ (TS _ 15) }
  ';' { PT _ (TS _ 16) }
  '<' { PT _ (TS _ 17) }
  '<=' { PT _ (TS _ 18) }
  '=' { PT _ (TS _ 19) }
  '==' { PT _ (TS _ 20) }
  '>' { PT _ (TS _ 21) }
  '>=' { PT _ (TS _ 22) }
  'boolean' { PT _ (TS _ 23) }
  'break' { PT _ (TS _ 24) }
  'continue' { PT _ (TS _ 25) }
  'else' { PT _ (TS _ 26) }
  'false' { PT _ (TS _ 27) }
  'final' { PT _ (TS _ 28) }
  'for' { PT _ (TS _ 29) }
  'fun' { PT _ (TS _ 30) }
  'if' { PT _ (TS _ 31) }
  'int' { PT _ (TS _ 32) }
  'lambda' { PT _ (TS _ 33) }
  'print' { PT _ (TS _ 34) }
  'return' { PT _ (TS _ 35) }
  'string' { PT _ (TS _ 36) }
  'to' { PT _ (TS _ 37) }
  'true' { PT _ (TS _ 38) }
  'void' { PT _ (TS _ 39) }
  'while' { PT _ (TS _ 40) }
  '{' { PT _ (TS _ 41) }
  '||' { PT _ (TS _ 42) }
  '}' { PT _ (TS _ 43) }
  L_Ident  { PT _ (TV $$) }
  L_integ  { PT _ (TI $$) }
  L_quoted { PT _ (TL $$) }

%%

Ident :: { Grammar.Abs.Ident }
Ident  : L_Ident { Grammar.Abs.Ident $1 }

Integer :: { Integer }
Integer  : L_integ  { (read $1) :: Integer }

String  :: { String }
String   : L_quoted { $1 }

Program :: { Grammar.Abs.Program }
Program : ListTopDef { Grammar.Abs.Program $1 }

TopDef :: { Grammar.Abs.TopDef }
TopDef : Type Ident '(' ListArg ')' Block { Grammar.Abs.FnDef $1 $2 $4 $6 }
       | Type ListItem ';' { Grammar.Abs.GlobDecl $1 $2 }
       | 'final' Type ListItem ';' { Grammar.Abs.GlobFinDecl $2 $3 }

ListTopDef :: { [Grammar.Abs.TopDef] }
ListTopDef : TopDef { (:[]) $1 } | TopDef ListTopDef { (:) $1 $2 }

Arg :: { Grammar.Abs.Arg }
Arg : Type Ident { Grammar.Abs.Arg $1 $2 }

ListArg :: { [Grammar.Abs.Arg] }
ListArg : {- empty -} { [] }
        | Arg { (:[]) $1 }
        | Arg ',' ListArg { (:) $1 $3 }

Block :: { Grammar.Abs.Block }
Block : '{' ListStmt '}' { Grammar.Abs.Block $2 }

ListStmt :: { [Grammar.Abs.Stmt] }
ListStmt : {- empty -} { [] } | Stmt ListStmt { (:) $1 $2 }

Stmt :: { Grammar.Abs.Stmt }
Stmt : ';' { Grammar.Abs.Empty }
     | Block { Grammar.Abs.BStmt $1 }
     | Type ListItem ';' { Grammar.Abs.Decl $1 $2 }
     | 'final' Type ListItem ';' { Grammar.Abs.DeclFinal $2 $3 }
     | Ident '=' Expr ';' { Grammar.Abs.Ass $1 $3 }
     | Ident '++' ';' { Grammar.Abs.Incr $1 }
     | Ident '--' ';' { Grammar.Abs.Decr $1 }
     | 'return' Expr ';' { Grammar.Abs.Ret $2 }
     | 'return' ';' { Grammar.Abs.VRet }
     | 'if' '(' Expr ')' Stmt { Grammar.Abs.Cond $3 $5 }
     | 'if' '(' Expr ')' Stmt 'else' Stmt { Grammar.Abs.CondElse $3 $5 $7 }
     | 'while' '(' Expr ')' Stmt { Grammar.Abs.While $3 $5 }
     | Expr ';' { Grammar.Abs.SExp $1 }
     | Type Ident '(' ListArg ')' Block { Grammar.Abs.FnInDef $1 $2 $4 $6 }
     | 'for' '(' Type Ident '=' Expr 'to' Expr ')' Stmt { Grammar.Abs.ConstFor $3 $4 $6 $8 $10 }
     | 'break' ';' { Grammar.Abs.Break }
     | 'continue' ';' { Grammar.Abs.Continue }
     | 'print' '(' Expr ')' ';' { Grammar.Abs.Print $3 }

Item :: { Grammar.Abs.Item }
Item : Ident { Grammar.Abs.NoInit $1 }
     | Ident '=' Expr { Grammar.Abs.Init $1 $3 }

ListItem :: { [Grammar.Abs.Item] }
ListItem : Item { (:[]) $1 } | Item ',' ListItem { (:) $1 $3 }

Type :: { Grammar.Abs.Type }
Type : 'int' { Grammar.Abs.Int }
     | 'string' { Grammar.Abs.Str }
     | 'boolean' { Grammar.Abs.Bool }
     | 'void' { Grammar.Abs.Void }
     | 'fun' '(' ListType '->' Type ')' { Grammar.Abs.FuncType $3 $5 }

ListType :: { [Grammar.Abs.Type] }
ListType : {- empty -} { [] }
         | Type { (:[]) $1 }
         | Type ',' ListType { (:) $1 $3 }

Expr6 :: { Grammar.Abs.Expr }
Expr6 : Ident { Grammar.Abs.EVar $1 }
      | Integer { Grammar.Abs.ELitInt $1 }
      | 'true' { Grammar.Abs.ELitTrue }
      | 'false' { Grammar.Abs.ELitFalse }
      | Ident '(' ListExpr ')' { Grammar.Abs.EApp $1 $3 }
      | String { Grammar.Abs.EString $1 }
      | 'lambda' '(' ListArg ')' ':' Type Block { Grammar.Abs.ELambda $3 $6 $7 }
      | '(' Expr ')' { $2 }

Expr5 :: { Grammar.Abs.Expr }
Expr5 : '-' Expr6 { Grammar.Abs.Neg $2 }
      | '!' Expr6 { Grammar.Abs.Not $2 }
      | Expr6 { $1 }

Expr4 :: { Grammar.Abs.Expr }
Expr4 : Expr4 MulOp Expr5 { Grammar.Abs.EMul $1 $2 $3 }
      | Expr5 { $1 }

Expr3 :: { Grammar.Abs.Expr }
Expr3 : Expr3 AddOp Expr4 { Grammar.Abs.EAdd $1 $2 $3 }
      | Expr4 { $1 }

Expr2 :: { Grammar.Abs.Expr }
Expr2 : Expr2 RelOp Expr3 { Grammar.Abs.ERel $1 $2 $3 }
      | Expr3 { $1 }

Expr1 :: { Grammar.Abs.Expr }
Expr1 : Expr2 '&&' Expr1 { Grammar.Abs.EAnd $1 $3 } | Expr2 { $1 }

Expr :: { Grammar.Abs.Expr }
Expr : Expr1 '||' Expr { Grammar.Abs.EOr $1 $3 } | Expr1 { $1 }

ListExpr :: { [Grammar.Abs.Expr] }
ListExpr : {- empty -} { [] }
         | Expr { (:[]) $1 }
         | Expr ',' ListExpr { (:) $1 $3 }

AddOp :: { Grammar.Abs.AddOp }
AddOp : '+' { Grammar.Abs.Plus } | '-' { Grammar.Abs.Minus }

MulOp :: { Grammar.Abs.MulOp }
MulOp : '*' { Grammar.Abs.Times }
      | '/' { Grammar.Abs.Div }
      | '%' { Grammar.Abs.Mod }

RelOp :: { Grammar.Abs.RelOp }
RelOp : '<' { Grammar.Abs.LTH }
      | '<=' { Grammar.Abs.LE }
      | '>' { Grammar.Abs.GTH }
      | '>=' { Grammar.Abs.GE }
      | '==' { Grammar.Abs.EQU }
      | '!=' { Grammar.Abs.NE }
{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

}
